tests/harness/errors/098_type_mismatch_operator_loc.eu
# Error: type mismatch via + operator — error location should point to user's + operator
result: 5 + "hello"
